--- a/.github/workflows/run-eval-pf-pipeline.yml
+++ b/.github/workflows/run-eval-pf-pipeline.yml
@@ -6,9 +6,9 @@ on:
     branches: [ main ]
 
 env: 
-  GROUP: ${{secrets.GROUP}}
-  WORKSPACE: ${{secrets.WORKSPACE}}
-  SUBSCRIPTION: ${{secrets.SUBSCRIPTION}}
+  GROUP: MLOps
+  WORKSPACE: MLOpsAML
+  SUBSCRIPTION: MCAPS-Hybrid-REQ-54441-2023-dade
   RUN_NAME: web_classification_variant_1_20230816_215600_605116
   EVAL_RUN_NAME: classification_accuracy_eval_default_20230821_111809_077086
 
