--- a/promptflow/web-classification/run.yml
+++ b/promptflow/web-classification/run.yml
@@ -7,8 +7,8 @@ runtime: llmopstest
 
 connections:
   classify_with_llm:
-    connection: Default_AzureOpenAI
-    deployment_name: gpt-35-turbo-0301
+    connection: DJAOAI
+    deployment_name: gpt-35-dj
   summarize_text_content:
-    connection: Default_AzureOpenAI
-    deployment_name: gpt-35-turbo-0301
+    connection: DJAOAI
+    deployment_name: gpt-35-dj
