--- a/.github/workflows/run-eval-pf-pipeline.yml
+++ b/.github/workflows/run-eval-pf-pipeline.yml
@@ -46,7 +46,10 @@ jobs:
     - name: run promptflow evaluations
       run: pfazure run create -f promptflow/web-classification/run_evaluation.yml --run ${{env.RUN_NAME}} --subscription ${{env.SUBSCRIPTION}} -g ${{env.GROUP}} -w ${{env.WORKSPACE}} --stream > promptflow/llmops-helper/eval_info.txt 
     - name: get eval run name
-      run: export EVAL_RUN_NAME_2=$(python promptflow/llmops-helper/parse_run_output.py eval_info.txt)
+      run: |
+        EVAL_RUN_NAME_RESULT=$(python promptflow/llmops-helper/parse_run_output.py eval_info.txt)
+        echo "Setting run name dynamic: $EVAL_RUN_NAME_RESULT
+        echo $EVAL_RUN_NAME_RESULT >> $GITHUB_ENV
     - name: show promptflow details
       run: pfazure run show-details --name ${{env.EVAL_RUN_NAME_2}} --subscription ${{env.SUBSCRIPTION}} -g ${{env.GROUP}} -w ${{env.WORKSPACE}}
     - name: show promptflow metrics
